feat: endpoints & docs for orders
